
	* ext/md5/md5.txt, ext/md5/md5.txt.jp: s/SuperClass/Superclass/.

Thu May 17 06:37:14 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/md5/md5.txt: make wording fixes.

	* ext/md5/md5.txt.jp: ditto.

Thu May 17 05:23:52 2001  Keiju Ishitsuka <keiju@ishitsuka.com>
	* lib/irb.rb lib/irb/multi-irb.rb lib/irb/ruby-lex.rb lib/irb/version.rb
	  resolve ctrl-c problem

Tue May 15 17:46:37 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_and): should not push frozen key string.

	* array.c (rb_ary_or): ditto.

Mon May 14 13:50:22 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_schedule): should save context before raising
	  deadlock, saved context for current thread might be obsolete.

	* time.c (make_time_t): non DST timezone shift supported (hopefully).

Mon May 14 11:54:20 2001  Tanaka Akira  <akr@m17n.org>

	* signal.c: SIGINFO added.

Mon May 14 08:57:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_ensure): should not SEGV when prot_tag is NULL.

Sun May 13 23:49:25 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/resource.rb: Modify copyright in resource script.

Fri May 11 23:51:54 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* process.c: silence VC++ warnings.

	* sprintf.c: ditto.

Fri May 11 03:38:11 2001  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT: Document find_library(), with_config() and
	  dir_config().

Fri May 11 03:37:53 2001  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT.jp: Remove the description of find_header() because
	  such a function does not actually exist.
    
	* README.EXT.jp: Update the description of dir_config().

Fri May 11 02:42:40 2001  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* README, README.jp: Fix CVS access and mailing lists info.

Fri May 11 02:00:44 2001  Ryo HAYASAKA  <ryoh@jaist.ac.jp>

	* bignum.c (bigdivrem): access boundary bug.

Tue May  8 17:12:43 2001  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (is_defined): core dumped during instance_eval for