@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.4"
-#define RUBY_RELEASE_DATE "2001-05-28"
+#define RUBY_RELEASE_DATE "2001-05-29"
 #define RUBY_VERSION_CODE 164
-#define RUBY_RELEASE_CODE 20010528
+#define RUBY_RELEASE_CODE 20010529
